<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_gray"
    tools:context="com.purdey.robert.caddytracker.ui.activities.MainMenuActivity">

    <!-- New Game navigation button -->
    <Button
        android:id="@+id/new_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/new_game" />

    <!-- Resume Game navigation button -->
    <Button
        android:id="@+id/resume_game"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game"
        android:text="@string/resume_game" />

    <!-- Statistics navigation button -->
    <Button
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/resume_game"
        android:text="@string/statistics" />

    <!-- Manage Courses navigation button -->
    <Button
        android:id="@+id/manage_courses"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statistics"
        android:text="@string/manage_courses"
        android:layout_marginBottom="20dp"
        android:onClick="onClickManageCourses"/>

    <!-- Manage Players button -->
    <Button
        android:id="@+id/manage_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_below="@+id/manage_courses"
        android:text="@string/manage_players"
        android:layout_marginBottom="20dp"
        android:onClick="onClickManagePlayers"/>

</RelativeLayout>
