<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_gray"
    tools:context="com.purdey.robert.caddytracker.ui.activities.AddCourseActivity">

    <!-- Course name -->
    <EditText
        android:id="@+id/etxt_course_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/course_name"
        android:layout_marginBottom="5dp"
        android:background="@color/white"/>

    <!-- Hole label -->
    <TextView
        android:id="@+id/txtv_hole_label"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_below="@id/etxt_course_name"
        android:text="@string/num_of_holes"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <!-- Hole amount -->
    <TextView
        android:id="@+id/txtv_hole_amount"
        android:text="9"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/etxt_course_name"
        android:layout_toRightOf="@id/txtv_hole_label"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/white" />

    <!-- Decrease hole button -->
    <Button
        android:id="@+id/bttn_decrease_hole_amount"
        android:text="-"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:textSize="25dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/etxt_course_name"
        android:layout_toRightOf="@id/txtv_hole_amount"
        android:layout_marginRight="5dp"
        android:onClick="decreaseHoleAmount"/>

    <!-- increase hole button -->
    <Button
        android:id="@+id/bttn_increase_hole_amount"
        android:text="+"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/etxt_course_name"
        android:layout_toRightOf="@id/bttn_decrease_hole_amount"
        android:onClick="increaseHoleAmount"/>

    <!-- Hole number label -->
    <TextView
        android:id="@+id/txtv_hole_number_label"
        android:layout_width="60dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_hole_amount"
        android:text="@string/hole"
        android:textSize="20dp"/>

    <!-- Hole par label -->
    <TextView
        android:id="@+id/txtv_hole_par_label"
        android:layout_width="60dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_hole_amount"
        android:layout_toRightOf="@id/txtv_hole_number_label"
        android:text="@string/par"
        android:textSize="20dp"/>

    <!-- Course Holes -->
    <ListView
        android:id="@+id/edit_hole_list_view"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/txtv_hole_par_label"
        android:layout_above="@+id/bttn_add_course_save"
        android:background="@android:color/white"
        android:divider="#CCCCCC"
        android:dividerHeight="1dp"
        android:paddingLeft="2dp">
    </ListView>

    <!-- Course save button -->
    <Button
        android:id="@+id/bttn_add_course_save"
        android:text="@string/save"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:background="@color/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="addCourse"/>

</RelativeLayout>
